# elytra

./: Cargo.toml  LICENSE  README.md  build_web.sh  log
.github/workflows/: web.yml
bytepack/: Cargo.toml
docs/: book.toml  mermaid-init.js
docs/src/: SUMMARY.md  glossary.md  protocol.md
docs/theme/: index.hbs
docs/theme/css/: elytra-highlight.css
elytra-bytepack/: Cargo.toml
elytra-cli/: Cargo.toml
elytra-cli/src/: lib.rs  tcp.rs  tui.rs  wasm.rs
elytra-cli/src/server/: tcp.rs
elytra-conf/: Cargo.toml  rust-toolchain.toml
elytra-conf/src/: command.rs  config.rs  entry.rs  field.rs  lib.rs  macros.rs  prelude.rs  proto.rs  traits.rs  values.rs
elytra-conf/src/entry/: actions.rs  fields.rs  options.rs  sections.rs
elytra-macros/: Cargo.toml
elytra-mock/: Cargo.toml
elytra-mock/src/: handler.rs  lib.rs
elytra-wasm/: Cargo.toml
elytra-wasm/src/: lib.rs
elytra-web/: README.md  index.html  package-lock.json  package.json  tsconfig.json
elytra-web/public/: clock_example.wasm
elytra-web/src/: App.tsx  elytra.tsx  index.tsx  mock.ts  style.css  types.ts  util.ts
elytra-web/src/components/: ElytraField.tsx  OptionElytraField.tsx  index.tsx
examples/clock-example/: Cargo.toml
mbconf/: Cargo.toml
mbconf/src/: command.rs  entry.rs  field.rs  lib.rs  macros.rs  prelude.rs  proto.rs  traits.rs  values.rs
mbconf/src/entry/: options.rs
