[package]
name = "elytra-cli"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
elytra-conf = { path = "../elytra-conf" }
owo-colors = "4"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
clap = { version = "4.5.53", features = ["derive"]}
itertools = "0.13"
log = "0.4.29"

wasmi = {version = "1.0.3", features = ["std"], optional = true}
wasmtime = { version = "39.0.1", default-features = false, features = ["runtime", "cranelift"], optional = true }

[features]
wasmtime = ["dep:wasmtime"]
wasmi = ["dep:wasmi"]
default = ["wasmi"]