[package]
name = "elytra-conf"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Embedded configuration library to enable standardized setup using WebUSB or serial"

[dependencies]
bitflags = { version = "2.10.0" }
log = { version = "0.4" }
defmt = {version = "1.0", optional = true}
typenum = { version = "1.19.0", features = ["const-generics"] }
bytepack = { path = "../bytepack"}

[dependencies.strum]
version = "0.27.2"
default-features = false
features = ["derive"]

[dependencies.num_enum]
version = "0.7.4"
features = []
default-features = false


[features]
alloc = []
defmt = ["dep:defmt"]

# only used to hide warnings about unused code
unused = []
