[package]
name = "elytra-wasm"
version = "0.1.0"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "WASM device implementation for elyra configurations"

[dependencies]
elytra-conf = { workspace = true, version = "1.0.1" }