[package]
name = "clock-example"
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
chrono = { version = "0.4.42", default-features =  false }
chrono-tz = { version = "0.10" }
log = { workspace = true }
elytra-conf = { workspace = true, features = ["alloc"] }

[target.wasm32-unknown-unknown.dependencies]
elytra-wasm = { workspace = true }